syntax = "proto3";

option csharp_namespace = "NDC_DONATION_2024.Protos";

package CustomerSetups;

service CustomerSetupsSvc {
	rpc GetRegions(EmptySetupRequest) returns (RegionResponse);
	rpc GetConstituencies(EmptySetupRequest) returns (ConstituenciesResponse);
	rpc GetListOfAgeRange(EmptySetupRequest) returns (ListOfAgeRanges);
	rpc GetPaymentMethods(EmptySetupRequest) returns (ListOfPaymentMethods);
	rpc GetSetupCountry(EmptySetupRequest) returns (ListOfSetupCountryResponse);
}

message EmptySetupRequest {

}

message RegionData {
	string regionId = 1;
	string regionName = 2;
}

message RegionResponse {
	
repeated RegionData regions = 1;
}


message ConstituencyData {

	string constituencyId = 1;
	string constituencyName = 2;
	string regionId = 3;
}

message ConstituenciesResponse {

   repeated ConstituencyData constituencies = 1;
}

message AgeRangeData {
	string ageRangeId = 1;
	string ageRangeName = 2;
}

message ListOfAgeRanges {
	repeated AgeRangeData ageRanges = 1;
}


message PaymentMethod {
 string paymentMethodId = 1;
 string PaymentMethodName =2;
 string paymentMethodType = 3;
}


message ListOfPaymentMethods {
	repeated PaymentMethod payMethodList = 1;
}

message SetupCountry {
	string countryCode = 1;
	string countryName = 2;
	string countryDialCode = 3;
}

message ListOfSetupCountryResponse {
	 repeated SetupCountry countryList = 1;
}